src/app.css
@tailwind base;

::-webkit-scrollbar {
  background-color: #ffffff00;
  border-radius: 10px;
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background-color: hsl(var(--nc));
  border-radius: 10px;
  width: 10px;
  height: 10px;
}

@tailwind components;
@tailwind utilities;

